# dronesphere

./: .commit_message  .env  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Architecture_review.md  JOURNEY.md  Makefile  Makefile.backup  PROJECT_STATUS.md  README.md  clean-backend-architecture.sh  cleanup.py  comprehensive_fix.py  diagnostic_fix.sh  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  enhance_command_runner.py  enhanced_mission_test.py  final_fix.py  final_rtl_mission_test.sh  fix_altitude_calculation.py  fix_backend_parameter.py  fix_call_method.py  fix_duplicate_decorator.py  fix_heartbeat_resilience.py  fix_issues.sh  fix_parameter_passing.py  fix_perform_method.py  fix_progress_reporting.py  fix_registry_method.py  fix_run_method.py  fix_server_polling.py  fix_takeoff_unpacking.py  fix_wait_final.py  fix_wait_parameter.py  fix_wait_proper.py  fix_yaml_criticality.py  (+16 more)
.git-hooks/: prepare-commit-msg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
agent/: api.py  executor.py  executor.py.backup  main.py  requirements.txt  run_agent.py
agent/backends/: base.py  mavsdk.py
agent/commands/: base.py  goto.py  land.py  rtl.py  takeoff.py  wait.py
agent/scripts/: start-drone-agent.sh
config/: nlp_config.py
config/prompts/: language_patterns.yaml
deploy/docker/: .env.docker  Dockerfile.dev  docker-compose.yaml  simulator-compose.yaml
docker/: Dockerfile
docker/monitoring/: prometheus.yml
docker/nginx/: nginx.conf
docker/sitl/: Dockerfile
docs/: api.md  architecture.md  command-schema.md  deployment.md  index.md
docs/architecture/: master-plan.md
docs/progress/: 001-initial-setup.md  002-basic-agent.md  003-server-foundation.md  004-configuration_fixes copy.md  006-cleanup-and-status.md  README.md
draft-test/: demo.py  main.py  pyproject.toml
drone_controller/: main.py  requirements.txt
dronesphere/: __init__.py  __main__.py  main.py
dronesphere.backup/: main.py
dronesphere.backup/agent/: api.py  config.py  heartbeat.py
dronesphere.backup/backends/: __init__.py  base.py  mavsdk.py
dronesphere.backup/commands/: enhanced_registry.py  registry.py
dronesphere.backup/core/: __init__.py  config.py  errors.py  logging.py  utils.py
dronesphere.backup/server/: __init__.py  config.py
dronesphere/agent/: __init__.py  __main__.py  api.py  api.py.backup  config.py  connection.py  heartbeat.py  instance.py  main.py  requirements.txt  runner.py
dronesphere/backends/: __init__.py  base.py  mavlink2rest.py  mavsdk.py  mavsdk.py.backup  mavsdk.py.backup_architecture  mavsdk.py.with_orbit  orbit_extension.py  pymavlink.py
dronesphere/commands/: __init__.py  base.py  enhanced_registry.py  registry.py  registry.py.backup
dronesphere/core/: __init__.py  config.py  errors.py  logging.py  models.py  utils.py
dronesphere/server/: __init__.py  __main__.py  api.py  client.py  config.py  main.py  requirements.txt
ests/: test_llm_infrastructure.py
llm-bridge/: .env.example  config.yaml  requirements.txt  server.py
llm-bridge/command_schemas/: goto.yaml  land,yaml  takeoff.yaml  wait.yaml
mcp/: .env.example  JOURNEY.md  requirements.txt  server.py  start_server.py  web_bridge.py  web_bridge.py.broken
mcp-server/: .env.example  pyproject.toml  requirements.txt  server.py  test_connectivity.py  test_http.sh  test_sse.sh  tools.py
mcp-server/core/: drone_api.py  llm_handler.py
mcp-server/examples/: n8n-workflow.json
mcp-server/prompts/: config.yaml
mcp/command_schemas/: goto.yaml  rtl.yaml
mcp/professional_server/: debug_mcp.py  fix_mcp_server.py  main.py  requirements.txt  start_server.py  test_mcp_server.py
mcp/web_bridge_demo/: requirements.txt  web_bridge.py
scripts/: README.md  apply_command_fix.py  check-env.sh  check-quality.sh  check_sitl.py  debug_extraction.py  demo.sh  dev-start.sh  dev.sh  emergency_fix.py  find_duplicates.py  fix_all_domain_issues.py  fix_domain_setup.sh  fix_env.py  fix_uv_setup.py  format-code.sh  lint.sh  manage_drones.sh  migrate_to_uv.py  project_status.py  quick-start.sh  quick_setup_ubuntu.sh  run-tests.sh  run_mavlink2rest.sh  run_sitl.sh  setup-dronesphere-proper.sh   setup.sh  setup_all_domain_files.py  setup_dev.sh  setup_domain_models.sh  setup_nlp.sh  setup_ollama.sh  setup_uv.sh  start-agent.sh  start-server.sh  start_mavlink2rest.sh  status.py  test-mission.sh  test-orbit.sh  test.sh  (+18 more)
server/: README.md  api.py  main.py  pyproject.toml  requirements.txt  schemas_api.py
server/src/: __init__.py
server/src/config/: __init__.py
server/src/server/: __init__.py  main.py
server/src/server/api/: __init__.py  chat.py  commands.py  drones.py  websocket.py
server/src/server/api/v1/: chat.py
server/src/server/core/: __init__.py  config.py  drone_manager.py  logging.py
server/src/server/services/: __init__.py  command_extraction.py
server/src/server/services/command/: __init__.py  loader.py  pipeline.py  protocol.py  validator.py
server/src/server/services/conversation/: __init__.py  manager.py  session.py
server/src/server/services/llm/: __init__.py  base.py  config.py  factory.py  parsing.py  pipeline.py
server/src/server/services/llm/prompts/: base.py  builder.py
server/src/server/services/llm/prompts/templates/: extraction.py
server/src/server/services/llm/providers/: __init__.py  ollama.py  openrouter.py
shared/: drones.yaml  models.py
shared.backup/config/: sitl.yaml  telemetry.yaml
shared/command_schemas/: goto.yaml  land.yaml  rtl.yaml  takeoff.yaml  wait.yaml
shared/commands/: schema.json
shared/config/: ai.yaml  logging.yaml  safety.yaml
shared/configs/: drones.example.json  llm_providers.example.json
src/config/: drone_config.py
tests/: conftest.py  test_chat_demo.py  test_command_extraction_e2e.py  test_env_fix.py  test_llm_phase1.py  test_openrouter_fixed.py  test_phase1_complete.py  test_prompt_comprehensive.py  test_prompt_system.py  test_provider_selection.py  test_robust_parsing.py
tests/integration/: __init__.py  test_agent.py  (+1 more)
(+107 files in other folders)
