# agent/pyproject.toml
[project]
name = "dronesphere-agent"
version = "0.1.0"
description = "DroneSphere drone-side agent for PX4/ArduPilot control"
authors = [{name = "Alireza Ghaderi", email = "p30planets@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mavsdk>=2.0.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
    "colorlog>=6.7.0",
    "tenacity>=8.2.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
]

[project.scripts]
dronesphere-agent = "agent.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["agent", "config"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
